quiz app is done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               />
               <div class="content">
                 <div class="zoom-text">
-                  <a href="/countdown-timer/index.html"
+                  <a href="/countdown-timer/index.html" target="_blank"
                     ><i class="fas fa-search-plus fa-2x"></i
                   ></a>
                 </div>
@@ -47,7 +47,7 @@
               <img src="/images/Quiz App.png" alt="img" class="img-fluid" />
               <div class="content">
                 <div class="zoom-text">
-                  <a href="/Quizz App/index.html"
+                  <a href="/Quizz App/index.html" target="_blank"
                     ><i class="fas fa-search-plus fa-2x"></i
                   ></a>
                 </div>
